# petrodbmanager

./: LICENSE  README.md  pyproject.toml
petrodb_app/: __main__.py  api.py  app.py  screens.py
