[project]
name = "petrodb_manager"
version = "0.1.0"
description = "Terminal client for the PetroDB REST API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx",
    "textual",
    "validators",
]

[project.scripts]
petrodb-manager = "petrodb_app.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff",
]
